--- a/NaproKarta.Client/App/src/index.html
+++ b/NaproKarta.Client/App/src/index.html
@@ -13,10 +13,12 @@
   <!-- <link rel="stylesheet" href="./assets/bootstrap-4.0.0-beta.2-dist/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"> -->
   <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"> -->
   
+ <!-- <link rel="stylesheet" href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css"> -->
 </head>
 
 <body>
-  <app-root ></app-root>
+    <app-root ></app-root>
+  
 
 
 
